test/sema/traits/implement_non_existing_member_function.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

struct S {
  impl A {
    // CHECK: [[# @LINE + 1]]:8: error: 'A' has no member function called 'foo'
    fn foo() {}
  }
}

fn main() {}
